name:               vigil
version:            0.1.0
synopsis:           Send metrics to Ganglia, Graphite, and statsd
description:        Send metrics directly from Haskell various monitoring and metrics services over TCP and UDP
license:            OtherLicense
license-file:       LICENSE
author:             Brendan Hay <brendan@soundcloud.com>
maintainer:         Brendan Hay <brendan@soundcloud.com>
homepage:           http://github.com/brendanhay/vigil
bug-reports:        http://github.com/brendanhay/vigil/issues
category:           Metrics, Monitoring
stability:          Experimental
build-type:         Simple
cabal-version:      >= 1.10

extra-source-files: README.md

source-repository head
  type:     git
  location: git://github.com/brendanhay/vigil.git

library
  exposed-modules:  Monitor.Ganglia.GMetric
                  , Monitor.Graphite.Statsd
                  , Monitor.Graphite.Direct

  hs-source-dirs:   src

  default-language: Haskell2010
  default-extensions:
                    OverloadedStrings
                  , DeriveDataTypeable
                  , RecordWildCards

  ghc-options:      -Wall -O2 -rtsopts
  ghc-prof-options: -prof -auto-all

  build-depends:    base >= 4.3 && < 5
                  , network
                  , binary
                  , bytestring
                  , data-default
                  , random
                  , time

executable gmetric-haskell
  main-is:          GMetric.hs

  hs-source-dirs:   src

  default-language: Haskell2010
  default-extensions:
                    OverloadedStrings
                  , DeriveDataTypeable
                  , RecordWildCards

  ghc-options:      -Wall -O2 -threaded -rtsopts
  ghc-prof-options: -prof -auto-all -with-rtsopts=-p

  build-depends:    base >= 4.3 && < 5
                  , network
                  , binary
                  , bytestring
                  , data-default
                  , random
                  , cmdargs
